--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
