Refactor code to add JeelizVTOWidget for trying on products

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "jeelizvtowidget": "^4.6.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
